# lp-cpp

./: .gitignore  CMakeLists.txt  README
cmake/: lp.boost.cmake
examples/: file1.cpp
include/lp/: README  textsplit.hpp
src/: main.cpp
